# att-mz

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  main.py  pyproject.toml  setting.example.toml  专项 review plan.md
.github/workflows/: ci.yml  release.yml
app/: cli.py  cli_main.py  game_reset.py  language.py  language_profiles.py  native_contract.py  native_javascript_ast.py  native_note_tag_scan.py  native_placeholder_scan.py  native_quality.py  native_rule_runtime.py  native_scope_index.py  native_structured_placeholder_scan.py  native_write_plan.py  regex_contract.py  rule_review.py  rule_review_decision.py  runtime_paths.py  source_language_probe.py  text_fact_core.py  text_fact_counts.py  text_fact_identity.py  text_fact_quality.py  text_fact_readers.py  text_facts.py  text_index.py
app/agent_toolkit/: __init__.py  flow_decision.py  import_impact.py  placeholder_scan.py  reports.py  service.py
app/application/: __init__.py  errors.py  file_writer.py  flow_gate.py  font_replacement.py  handler.py  rule_import_backup.py  runtime.py  summaries.py  (+2 more)
crates/att-mz-core/: Cargo.toml
crates/att-mz-core/src/: config.rs  font_replacement.rs  japanese_residual_rules.rs  lib.rs  placeholder_scan.rs  rmmz.rs  translate.rs  translation_state.rs  workspace.rs  write_back.rs
docs/: README.md  advanced-usage.md  database-wiki.md  event-command-rules-agent-prompt.md  feedback-iteration-repair-plan.md  plugin-rules-agent-prompt.md  refactor-split-matrix.md  release-readme.md  rm游戏全系列支持理论.md  terminology-glossary-handoff.md
prompts/: text_translation_en_to_zh_system.md  text_translation_ja_to_zh_system.md  text_translation_system.md
rust/: Cargo.toml
rust/src/: lib.rs  native_core.rs
rust/src/native_core/: controls.rs  javascript_ast.rs  models.rs  placeholders.rs  pool.rs  regex_contract.rs  rules.rs  text_facts.rs  write_protocol.rs
rust/src/native_core/quality/: line_width.rs  mod.rs  placeholder.rs  residual.rs  structure.rs
rust/src/native_core/rule_runtime/: api.rs  engine.rs  errors.rs  mod.rs  model.rs  runtime_match.rs  store.rs
rust/src/native_core/rule_runtime/adapters/: config_patterns.rs  event_commands.rs  mod.rs  mv_virtual_namebox.rs  nonstandard_data.rs  note_tags.rs  placeholders.rs  plugin_config.rs  plugin_source.rs  source_residual.rs  structured_placeholders.rs
rust/src/native_core/scope_index/: contracts.rs  event_commands.rs  fingerprint.rs  mod.rs  mv_virtual_namebox.rs  nonstandard_data.rs  note_tags.rs  path_templates.rs  placeholders.rs  plugin_config.rs  plugin_source.rs  rebuild.rs  storage.rs  structured_placeholders.rs
rust/src/native_core/write_back_plan/: command_writer.rs  data_writer.rs  font.rs  layout.rs  mod.rs  models.rs  mv_virtual_namebox.rs  nonstandard_data_writer.rs  note_writer.rs  plugin_config_writer.rs  plugin_source.rs  quality_gate.rs  repository.rs  terminology.rs  test_support.rs  text_prepare.rs  utils.rs
rust_app/: lib.rs  native_core.rs
scripts/: benchmark_active_runtime_audit.py  benchmark_rebuild_active_runtime.py  benchmark_small_tasks.py  build_release.py  extract_release_notes.py  generate_skill_protocol.py
tests/: _native_write_plan_helper.py  agent_toolkit_contract_fixtures.py  conftest.py  current_text_fact_scope.py  current_v2_scope.py  native_rule_seed.py  rmmz_writeback_contract_fixtures.py  scan_budget_contract.py  test_agent_toolkit.py  test_agent_toolkit_coverage.py  test_agent_toolkit_diagnostics.py  test_agent_toolkit_feedback.py  test_agent_toolkit_manual_import.py  test_agent_toolkit_quality_report.py  test_agent_toolkit_rule_import.py  test_agent_toolkit_translation_limits.py  test_agent_toolkit_workflow_gate.py  test_agent_toolkit_workspace.py  test_benchmark_active_runtime_audit.py  test_benchmark_rebuild_active_runtime.py  test_benchmark_small_tasks.py  test_cli_json_output.py  test_cli_public_contract.py  test_config_overrides.py  test_doctor_flow_decision.py  test_event_command_text.py  test_external_input.py  test_flow_decision.py  test_font_replacement_transactions.py  test_game_data_external_input.py  test_game_reset.py  test_llm_retry.py  test_manual_translation_scope.py  test_native_adapters.py  test_native_rule_runtime.py  test_native_scope_index.py  test_nonstandard_data.py  test_observability.py  test_persistence.py  test_plugin_source_text.py  (+32 more)
(+480 files in other folders)
