[project]
name = "att-mz"
version = "0.1.0"
description = "Autonomous Translation Toolkit for RPG Maker MZ"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "demjson3>=3.0.6",
    "json-repair>=0.58.5",
    "loguru>=0.7.3",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[project.scripts]
att-mz = "app.cli_main:main"

[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "maturin>=1.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.maturin]
module-name = "app._native"
python-source = "."
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]

[tool.basedpyright]
include = [
    "app",
    "main.py",
    "tests",
]
exclude = [
    ".venv",
    "__pycache__",
]
pythonVersion = "3.14"
stubPath = "typings"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".",
]
