[package]
name = "att-mz-native"
version = "0.1.6"
edition = "2024"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.16"
json5 = "0.4"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rayon = "1.11"
regex = "1.12"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha1 = "0.10"
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
